Add autofocus to text field so cursor is automatically there

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -11,7 +11,7 @@
 <% if @game.playing? %>
   <%= form_tag("/games/#{@game.id}", method: "put") do %>
     <%= label_tag 'guess a letter' %>
-    <%= text_field_tag :guess %>
+    <%= text_field_tag :guess, "", :autofocus => true %>
     <%= submit_tag name="Submit Guess"%>
 
   <% end %>
