make start-a-new-game button a partial and add to show if game is won or lost

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Would you like to play a game?</h1>
 
-<%= button_to "Start a game", { :controller => "games", :action => "create"} %>
+  <%= render 'start'  %>
+
+
