--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -11,7 +11,7 @@
 <% if @game.playing? %>
   <%= form_tag("/games/#{@game.id}", method: "put") do %>
     <%= label_tag 'guess a letter' %>
-    <%= text_field_tag :guess, "", :autofocus => true %>
+    <%= text_field_tag :guess, "", :autofocus => true, :maxlength => 1, :size =>2 %>
     <%= submit_tag name="Submit Guess"%>
   <% end %>
 <% elsif @game.won? %>
