--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+body{
+  /*background-image: url("letter_photo_bw_2.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  color: white;*/
+}
+
