Refactor leaderboard so db query is made in controller and use an instance variable in the view

--- a/app/views/games/_leaderboard.html.erb
+++ b/app/views/games/_leaderboard.html.erb
@@ -5,7 +5,7 @@
     <td>User Name</td>
     <td>Score</td>
   </tr>
-  <% Game.leaderboard.each do |user, count| %>
+  <% @leaderboard.each do |user, count| %>
     <tr>
       <td><%= user.name %></td>
       <td><%= count %></td>
