--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Guess a letter. You have <div id="guesses-left"><%= @game.guesses_left %></div> incorrect guesses left.</h1>
+<h1>Guess a letter. You have <span id="guesses-left"><%= @game.guesses_left %></span> incorrect guesses left.</h1>
 
 <div id="word-display"><%= @game.word_display %></div>
 <p>The word:</p>
