--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,11 +1,11 @@
-
-<h1>Would you like to play a game?</h1>
+<div id="index">
+<h2 id="play-a-game">Shall we play a game?</h2>
 
   <%= render 'start'  %>
 
   <%= render 'leaderboard' %>
 
-
+</div>
 
 
 
