--- a/app/views/games/_start.html.erb
+++ b/app/views/games/_start.html.erb
@@ -1,1 +1,1 @@
-<%= button_to "Start a new game", { :controller => "games", :action => "create"} %>
+<div id="start-button"><%= button_to "Start a new game", { :controller => "games", :action => "create"} %></div>
