Add footer and style it; adjust leaderboard styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,22 @@
     </nav>
     <h1 id="hangman-title">Hangman</h1>
     <%= yield %>
+    <footer class=" footer navbar navbar-default navbar-fixed-bottom">
+      <div class="container">
+        <div class="row">
+          <!-- SOCIAL ICONS -->
+          <div class="col-sm-6 col-sm-push-10" id="github">
+            <span>Find me on:</span>
+            <a href="https://github.com/katieboundary/hangman">GitHub</a>
+            <a href="https://www.linkedin.com/in/katiemoneill">LinkedIn</a>
+          </div>
+          <!-- /SOCIAL ICONS -->
+          <div class="col-sm-6 col-sm-pull-6">
+            <p>Hangman | Created by Katie O'Neill.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
 
