--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -73,7 +73,8 @@ body{
   margin-right: 20%;
   padding-top: 5%;
   border: 1px solid #e6e6e6;
-  font-size: 140%;
+  font-size: 120%;
+  padding-bottom: 3%;
 }
 
 #score{
@@ -98,7 +99,7 @@ tbody tr:nth-child(odd) {
 #leaderboard-title{
   text-align: center;
   padding-bottom: 1%;
-  padding-top: 7%;
+  padding-top: 2%;
 }
 
 #start-button{
@@ -115,6 +116,7 @@ tbody tr:nth-child(odd) {
   color: #007acc;
   font-size: 300%;
   text-shadow: 1px 1px 1px #000000;
+  padding-top: 1%;
 }
 
 #word-display{
@@ -149,6 +151,16 @@ tbody tr:nth-child(odd) {
 .log{
   text-align: center;
   padding-top: 3%;
+}
+
+.footer{
+  color: black;
+  background-color: black;
+  /*height: 0%;*/
+}
+
+#github{
+  padding-right: 0;
 }
 
 
