--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -3,11 +3,10 @@
 
   <div id="word-display"><%= @game.word_display %></div>
 
-  <%= @game.word %>
-
   <p id="wrong-guesses">Incorrect Guesses:</p>
 
   <div id="display-incorrect-guesses"><%= @game.display_incorrect_guesses%></div>
+
   <%= content_tag :div, id: "playing", hidden: !@game.playing? do %>
     <% render'game' %>
   <% end %>
@@ -16,7 +15,8 @@
     <%= render 'start'  %>
   <% end %>
   <%= content_tag :div, id: "lost", hidden: !@game.lost? do %>
-    <h1>Oh no! You lost!</h1>
+    <h3>Oh no! You lost!</h3>
+    <h4>The word was: <%=@game.word%></h4>
     <%= render 'start'  %>
   <% end %>
 </div>
